fix bug with overflow-x

--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -3,8 +3,6 @@
   max-width: 1280px;
   padding: 0 20px;
 
-  overflow-x: hidden;
-
   @include onTablet {
     padding: 0 36px;
   }
