--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,4 +1,10 @@
 .gallery {
+  overflow-x: hidden;
+  
+  @include onDesktop {
+    overflow-x: visible;
+  }
+
   &__title {
     margin-bottom: 40px;
   }
@@ -28,7 +34,7 @@
     @include hover(transform, scale(1.1));
 
     @include onTablet {
-      @include hover(transform, scale(1.2));
+      @include hover(transform, scale(1.1));
     }
 
     @include onDesktop {
